--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -9,7 +9,7 @@
 .profile-container{
     height: 100%;
     color: #fff;
-    background: #2a8319;
+    background: rgb(49, 49, 49);
 }
 .activity{
     display: grid;
